# ecommerce-fullstack

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  pom.xml
backend/pricing-engine/: CMakeLists.txt
backend/pricing-engine/proto/: pricing.proto
backend/pricing-engine/src/: pricing_engine.cpp  pricing_engine.h  server.cpp
backend/src/main/java/com/example/ecommerce_backend/: DataSeeder.java  EcommerceBackendApplication.java  GrpcConfig.java  OrderNotificationService.java  OrderStatus.java  OrderStatusScheduler.java  OrderUpdateMessage.java  OutOfStockException.java  Product.java  ProductController.java  ProductNotFoundException.java  ProductOrder.java  ProductOrderController.java  ProductOrderNotFoundException.java  ProductOrderRepository.java  ProductOrderService.java  ProductRepository.java  TransactionConfig.java  User.java  UserController.java  UserNotFoundException.java  UserRepository.java  WebSocketConfig.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/example/ecommerce_backend/: ProductOrderControllerTest.java  ProductOrderServiceTest.java  WebSocketIntegrationTest.java
frontend/: .gitignore  locustfile.py  package-lock.json  package.json
frontend/src/: App.css  App.js  api.js  setupProxy.js  useFetch.js  useOrderNotifications.js  useProducts.js
frontend/src/components/: CartDrawer.js
frontend/src/hooks/: useFetch.js
frontend/src/pages/: HomePage.js  MarketplacePage.js  OrdersPage.js  ProductsPage.js  UsersPage.js
